2008-09-22  Torbjorn Granlund  <tege@swox.com>

	* tune/speed.c (routine): New entry for mpn_mul.
	* tune/speed.h (SPEED_ROUTINE_MPN_MUL): Renamed from
	SPEED_ROUTINE_MPN_MUL_BASECASE.
	(speed_mpn_mul): Renamed from speed_mpn_mul_basecase.
	(SPEED_ROUTINE_MPN_MUL): Allocate our own memory of xp operand.

	* tune/common.c: Corresponding changes.
	
2008-09-21  Torbjorn Granlund  <tege@swox.com>

	* mpn/generic/get_str.c (GET_STR_DC_THRESHOLD): Remove default.
	(GET_STR_PRECOMPUTE_THRESHOLD): Likewise.
	Misc code cleanups.

	* gmp-impl.h (mpn_dc_set_str_itch): Allocate GMP_LIMB_BITS more limbs.

	Revert:
	* mpn/generic/set_str.c:
	(mpn_dc_set_str): Remove impossible case, replace by an ASSERT.

2008-09-18  Torbjorn Granlund  <tege@swox.com>

	* mpn/alpha/ev6/gmp-mparam.h (DIVEXACT_BY3_METHOD): Define.

	* mpn/ia64/diveby3.asm: Remove.
	* mpn/x86/diveby3.asm: Remove.
	* mpn/x86/k6/diveby3.asm: Remove.
	* mpn/x86/k7/diveby3.asm: Remove.
	* mpn/x86/p6/diveby3.asm: Remove.
	* mpn/x86/pentium/diveby3.asm: Remove.
	* mpn/x86_64/diveby3.asm: Remove.
	* mpn/x86/pentium4/sse2/diveby3.asm: Remove.

	* configure.in (HAVE_NATIVE): List divexact_by3c.

	* gmp-impl.h (mpn_divexact_by3c): Override gmp-h.in's definition.
	(DIVEXACT_BY3_METHOD): Don't default to 0 if
	HAVE_NATIVE_mpn_divexact_by3c.

2008-09-16  Torbjorn Granlund  <tege@swox.com>

	* mpn/generic/toom_interpolate_7pts.c: Use new mpn_divexact_byN
	functions.

	* gmp-impl.h (mpn_divexact_by3, mpn_divexact_by5, mpn_divexact_by7,
	mpn_divexact_by9, mpn_divexact_by11, mpn_divexact_by13,
	mpn_divexact_by15): New macros, defined in terms of mpn_bdiv_dbm1.

	* configure.in (gmp_mpn_functions): List bdiv_dbm1c.
	(HAVE_NATIVE): Likewise.
	* mpn/asm-defs.m4: Define bdiv_dbm1c.
	* gmp-impl.h (mpn_bdiv_dbm1c): Declare.
	(mpn_bdiv_dbm1): New macro.
	* mpn/generic/bdiv_dbm1c.c: New file.
	* mpn/alpha/bdiv_dbm1c.asm: New file.
	* mpn/ia64/bdiv_dbm1c.asm: New file.
	* mpn/powerpc32/bdiv_dbm1c.asm: New file.